--- a/index.html
+++ b/index.html
@@ -25,8 +25,7 @@
         <header class="profile-section">
             <div class="profile-image-container">
                 <!-- Placeholder for Doctor's Image -->
-                <img src="https://placehold.co/150x150/008080/ffffff?text=Dottore" alt="Foto Profilo"
-                    class="profile-image">
+                <img src="./src/robert.png" alt="Foto Profilo" class="profile-image">
             </div>
             <h1 class="profile-name">Dott. Roberto Palazzolo</h1>
             <p class="profile-title">Specialista in Endocrinologia</p>
