--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Dott. Roberto Palazzolo - Endocrinologo</title>
     <meta name="description"
-        content="Link utili e contatti del Dott. [Nome Cognome], Medico Chirurgo Specialista in Endocrinologia e Malattie del Metabolismo.">
+        content="Link utili e contatti del Dott. Roberto Palazzolo, Medico Chirurgo Specialista in Endocrinologia e Malattie del Metabolismo.">
 
     <!-- Google Fonts -->
     <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -25,7 +25,7 @@
         <header class="profile-section">
             <div class="profile-image-container">
                 <!-- Placeholder for Doctor's Image -->
-                <img src="./src/robert.png" alt="Foto Profilo" class="profile-image">
+                <img src="./src/robert" alt="Foto Profilo" class="profile-image">
             </div>
             <h1 class="profile-name">Dott. Roberto Palazzolo</h1>
             <p class="profile-title">Specialista in Endocrinologia</p>
@@ -43,13 +43,13 @@
             </a>
 
             <!-- Contact Links -->
-            <a href="https://wa.me/390000000000" class="link-card">
+            <a href="https://wa.me/+393496584329" class="link-card">
                 <div class="icon-box"><i class="ph ph-whatsapp-logo"></i></div>
                 <span class="link-text">Scrivimi su WhatsApp</span>
                 <div class="arrow-box"><i class="ph ph-caret-right"></i></div>
             </a>
 
-            <a href="tel:+390000000000" class="link-card">
+            <a href="tel:+393496584329" class="link-card">
                 <div class="icon-box"><i class="ph ph-phone"></i></div>
                 <span class="link-text">Chiama lo Studio</span>
                 <div class="arrow-box"><i class="ph ph-caret-right"></i></div>
