Fix image source for doctor's profile picture

--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
         <header class="profile-section">
             <div class="profile-image-container">
                 <!-- Placeholder for Doctor's Image -->
-                <img src="./src/robert" alt="Foto Profilo" class="profile-image">
+                <img src="./src/robert.png" alt="Foto Profilo" class="profile-image">
             </div>
             <h1 class="profile-name">Dott. Roberto Palazzolo</h1>
             <p class="profile-title">Specialista in Endocrinologia</p>
