--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
                 <div class="arrow-box"><i class="ph ph-caret-right"></i></div>
             </a>
 
-            <a href="mailto:email@esempio.com" class="link-card">
+            <a href="mailto:Email: robertopalazzolomed@gmail.com" class="link-card">
                 <div class="icon-box"><i class="ph ph-envelope-simple"></i></div>
                 <span class="link-text">Invia una Email</span>
                 <div class="arrow-box"><i class="ph ph-caret-right"></i></div>
@@ -69,7 +69,8 @@
 
             <!-- Social Links Row -->
             <div class="social-row">
-                <a href="#" class="social-icon" aria-label="Instagram"><i class="ph ph-instagram-logo"></i></a>
+                <a href="https://www.instagram.com/dott.robertopalazzolo?igsh=MTNwd3h2Z3cxc2YzMw==" class="social-icon"
+                    aria-label="Instagram"><i class="ph ph-instagram-logo"></i></a>
                 <a href="#" class="social-icon" aria-label="Facebook"><i class="ph ph-facebook-logo"></i></a>
                 <a href="#" class="social-icon" aria-label="Linkedin"><i class="ph ph-linkedin-logo"></i></a>
             </div>
