prova di prenotazione tramite google calendar

--- a/index.html
+++ b/index.html
@@ -35,8 +35,8 @@
         <!-- Links Section -->
         <main class="links-container">
 
-            <!-- Primary Action (Booking) -->
-            <a href="#" class="link-card featured">
+            <!-- Primary Action (Booking) - opens Google Calendar event template -->
+            <a href="https://www.google.com/calendar/render?action=TEMPLATE&text=Prenotazione+Visita+-+Dott.+Roberto+Palazzolo&details=Richiesta+prenotazione+visita.%0ATelefono%3A+%2B393496584329%0AEmail%3A+robertopalazzolomed%40gmail.com&location=Studio+Dott.+Roberto+Palazzolo&add=robertopalazzolomed%40gmail.com" target="_blank" rel="noopener noreferrer" class="link-card featured">
                 <div class="icon-box"><i class="ph ph-calendar-check"></i></div>
                 <span class="link-text">Prenota una Visita</span>
                 <div class="arrow-box"><i class="ph ph-caret-right"></i></div>
@@ -55,15 +55,15 @@
                 <div class="arrow-box"><i class="ph ph-caret-right"></i></div>
             </a>
 
-            <a href="mailto:Email: robertopalazzolomed@gmail.com" class="link-card">
+            <a href="mailto:robertopalazzolomed@gmail.com" class="link-card">
                 <div class="icon-box"><i class="ph ph-envelope-simple"></i></div>
                 <span class="link-text">Invia una Email</span>
                 <div class="arrow-box"><i class="ph ph-caret-right"></i></div>
             </a>
 
-            <a href="#" class="link-card">
-                <div class="icon-box"><i class="ph ph-globe"></i></div>
-                <span class="link-text">Visita il mio Sito Web</span>
+            <a href="https://www.google.com/search?q=Dott.+Roberto+Palazzolo+Endocrinologo" target="_blank" rel="noopener noreferrer" class="link-card">
+                <div class="icon-box"><img src="https://www.google.com/favicon.ico" alt="Google" class="google-icon"></div>
+                <span class="link-text">Dicono di me</span>
                 <div class="arrow-box"><i class="ph ph-caret-right"></i></div>
             </a>
 
