Implementazione SEO pt 1

--- a/index.html
+++ b/index.html
@@ -4,9 +4,54 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Dott. Roberto Palazzolo - Endocrinologo</title>
+    <title>Roberto Palazzolo - Endocrinologo</title>
     <meta name="description"
-        content="Link utili e contatti del Dott. Roberto Palazzolo, Medico Chirurgo Specialista in Endocrinologia e Malattie del Metabolismo.">
+        content="Link utili e contatti del Dott. Roberto Palazzolo,medico in formazione in Endocrinologia e specialista in cure per diabete, obesità e metabolismo, problemi alla tiroide. Prenota una visita.">
+    <meta name="keywords"
+        content="Roberto Palazzolo, Endocrinologo, Metabolismo, Visita Endocrinologica, Prenotazione, Medico">
+    <meta name="author" content="Roberto Palazzolo">
+    <link rel="canonical" href="https://frank-leogit.github.io/Sito-Roberto/">
+
+    <!-- Open Graph / Facebook / WhatsApp Preview -->
+    <meta property="og:type" content="website">
+    <meta property="og:url" content="https://frank-leogit.github.io/Sito-Roberto/">
+    <meta property="og:title" content="Roberto Palazzolo - Endocrinologo">
+    <meta property="og:description"
+        content="Prenota una visita o contattami. Specialista in Endocrinologia e Malattie del Metabolismo.">
+    <meta property="og:image" content="https://frank-leogit.github.io/Sito-Roberto/src/robert.png">
+
+    <!-- Twitter -->
+    <meta property="twitter:card" content="summary_large_image">
+    <meta property="twitter:url" content="https://frank-leogit.github.io/Sito-Roberto/">
+    <meta property="twitter:title" content="Roberto Palazzolo - Endocrinologo">
+    <meta property="twitter:description"
+        content="Prenota una visita o contattami. Specialista in Endocrinologia e Malattie del Metabolismo.">
+    <meta property="twitter:image" content="https://frank-leogit.github.io/Sito-Roberto/src/robert.png">
+
+    <!-- Favicon -->
+    <link rel="icon" type="image/png" href="./src/robert.png">
+
+    <!-- Structured Data (JSON-LD) for SEO -->
+    <script type="application/ld+json">
+    {
+      "@context": "https://schema.org",
+      "@type": "Physician",
+      "name": "Roberto Palazzolo",
+      "image": "https://frank-leogit.github.io/Sito-Roberto/src/robert.png",
+      "description": "Medico in formazione in Endocrinologia e specialista in cure per diabete, obesità e metabolismo, problemi alla tiroide.",
+      "url": "https://frank-leogit.github.io/Sito-Roberto/",
+      "telephone": "+393496584329",
+      "email": "robertopalazzolomed@gmail.com",
+      "priceRange": "$$",
+      "address": {
+        "@type": "PostalAddress",
+        "addressCountry": "IT"
+      },
+      "sameAs": [
+        "https://www.instagram.com/dott.robertopalazzolo?igsh=MTNwd3h2Z3cxc2YzMw=="
+      ]
+    }
+    </script>
 
     <!-- Google Fonts -->
     <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -27,16 +72,18 @@
                 <!-- Placeholder for Doctor's Image -->
                 <img src="./src/robert.png" alt="Foto Profilo" class="profile-image">
             </div>
-            <h1 class="profile-name">Dott. Roberto Palazzolo</h1>
-            <p class="profile-title">Specialista in Endocrinologia</p>
-            <p class="profile-bio">Ti aiuto a ritrovare il tuo equilibrio ormonale e metabolico.</p>
+            <h1 class="profile-name">Roberto Palazzolo</h1>
+            <p class="profile-title">Endocrinologo in Formazione</p>
+            <p class="profile-bio">Medico in formazione in Endocrinologia e specialista in cure per diabete, obesità e
+                metabolismo, problemi alla tiroide.</p>
         </header>
 
         <!-- Links Section -->
         <main class="links-container">
 
             <!-- Primary Action (Booking) - opens Google Calendar event template -->
-            <a href="https://www.google.com/calendar/render?action=TEMPLATE&text=Prenotazione+Visita+-+Dott.+Roberto+Palazzolo&details=Richiesta+prenotazione+visita.%0ATelefono%3A+%2B393496584329%0AEmail%3A+robertopalazzolomed%40gmail.com&location=Studio+Dott.+Roberto+Palazzolo&add=robertopalazzolomed%40gmail.com" target="_blank" rel="noopener noreferrer" class="link-card featured">
+            <a href="https://www.google.com/calendar/render?action=TEMPLATE&text=Prenotazione+Visita+-+Dott.+Roberto+Palazzolo&details=Richiesta+prenotazione+visita.%0ATelefono%3A+%2B393496584329%0AEmail%3A+robertopalazzolomed%40gmail.com&location=Studio+Dott.+Roberto+Palazzolo&add=robertopalazzolomed%40gmail.com"
+                target="_blank" rel="noopener noreferrer" class="link-card featured">
                 <div class="icon-box"><i class="ph ph-calendar-check"></i></div>
                 <span class="link-text">Prenota una Visita</span>
                 <div class="arrow-box"><i class="ph ph-caret-right"></i></div>
@@ -61,8 +108,10 @@
                 <div class="arrow-box"><i class="ph ph-caret-right"></i></div>
             </a>
 
-            <a href="https://www.google.com/search?q=Dott.+Roberto+Palazzolo+Endocrinologo" target="_blank" rel="noopener noreferrer" class="link-card">
-                <div class="icon-box"><img src="https://www.google.com/favicon.ico" alt="Google" class="google-icon"></div>
+            <a href="https://www.google.com/search?q=Dott.+Roberto+Palazzolo+Endocrinologo" target="_blank"
+                rel="noopener noreferrer" class="link-card">
+                <div class="icon-box"><img src="https://www.google.com/favicon.ico" alt="Google" class="google-icon">
+                </div>
                 <span class="link-text">Dicono di me</span>
                 <div class="arrow-box"><i class="ph ph-caret-right"></i></div>
             </a>
