SEO fixes: Content expansion, H1 alignment, meta tags

--- a/index.html
+++ b/index.html
@@ -4,28 +4,31 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Roberto Palazzolo - Endocrinologo</title>
+    <title>Dott. Roberto Palazzolo - Endocrinologo</title>
     <meta name="description"
-        content="Link utili e contatti del Dott. Roberto Palazzolo,medico in formazione in Endocrinologia e specialista in cure per diabete, obesità e metabolismo, problemi alla tiroide. Prenota una visita.">
+        content="Roberto Palazzolo, Endocrinologo specialista in diabete, tiroide e metabolismo. Prenota una visita o contattami su WhatsApp.">
     <meta name="keywords"
-        content="Roberto Palazzolo, Endocrinologo, Metabolismo, Visita Endocrinologica, Prenotazione, Medico">
-    <meta name="author" content="Roberto Palazzolo">
+        content="Roberto Palazzolo, Endocrinologo, Metabolismo, Visita Endocrinologica, Prenotazione, Medico, Diabete, Tiroide, Brescia, Milano">
+    <meta name="author" content="Dott. Roberto Palazzolo">
     <link rel="canonical" href="https://frank-leogit.github.io/Sito-Roberto/">
+
+    <!-- Apple Touch Icon -->
+    <link rel="apple-touch-icon" href="./src/robert.png">
 
     <!-- Open Graph / Facebook / WhatsApp Preview -->
     <meta property="og:type" content="website">
     <meta property="og:url" content="https://frank-leogit.github.io/Sito-Roberto/">
-    <meta property="og:title" content="Roberto Palazzolo - Endocrinologo">
+    <meta property="og:title" content="Dott. Roberto Palazzolo - Endocrinologo">
     <meta property="og:description"
-        content="Prenota una visita o contattami. Specialista in Endocrinologia e Malattie del Metabolismo.">
+        content="Endocrinologo specialista in diabete, tiroide e metabolismo. Prenota la tua visita o contattami.">
     <meta property="og:image" content="https://frank-leogit.github.io/Sito-Roberto/src/robert.png">
 
     <!-- Twitter -->
     <meta property="twitter:card" content="summary_large_image">
     <meta property="twitter:url" content="https://frank-leogit.github.io/Sito-Roberto/">
-    <meta property="twitter:title" content="Roberto Palazzolo - Endocrinologo">
+    <meta property="twitter:title" content="Dott. Roberto Palazzolo - Endocrinologo">
     <meta property="twitter:description"
-        content="Prenota una visita o contattami. Specialista in Endocrinologia e Malattie del Metabolismo.">
+        content="Endocrinologo specialista in diabete, tiroide e metabolismo. Prenota la tua visita.">
     <meta property="twitter:image" content="https://frank-leogit.github.io/Sito-Roberto/src/robert.png">
 
     <!-- Favicon -->
@@ -72,8 +75,8 @@
                 <!-- Placeholder for Doctor's Image -->
                 <img src="./src/robert.png" alt="Foto Profilo" class="profile-image">
             </div>
-            <h1 class="profile-name">Roberto Palazzolo</h1>
-            <p class="profile-title">Endocrinologo in Formazione</p>
+            <h1 class="profile-name">Dott. Roberto Palazzolo</h1>
+            <p class="profile-title">Endocrinologia</p>
             <p class="profile-bio">Medico in formazione in Endocrinologia e specialista in cure per diabete, obesità e
                 metabolismo, problemi alla tiroide.</p>
         </header>
@@ -115,6 +118,31 @@
                 <span class="link-text">Dicono di me</span>
                 <div class="arrow-box"><i class="ph ph-caret-right"></i></div>
             </a>
+
+            <!-- SEO Content Section: Hidden from primary view but accessible -->
+            <section class="info-section">
+                <h2>I miei Servizi</h2>
+                <p>
+                    Il <strong>Dott. Roberto Palazzolo</strong> è un medico specialista in
+                    <strong>Endocrinologia</strong> e Malattie del Metabolismo.
+                    Offre consulenze personalizzate per la gestione di patologie complesse come:
+                </p>
+                <ul>
+                    <li><strong>Diabete Mellito</strong> (Tipo 1, Tipo 2 e Gestazionale)</li>
+                    <li><strong>Patologie della Tiroide</strong> (Ipotiroidismo, Ipertiroidismo, Noduli, Tiroidite di
+                        Hashimoto)</li>
+                    <li><strong>Obesità e Sindrome Metabolica</strong> (Percorsi di calo ponderale)</li>
+                    <li><strong>Disturbi Ormonali</strong> (Menopausa, irregolarità del ciclo, ovaio policistico)</li>
+                    <li><strong>Osteoporosi</strong> e salute dell'osso</li>
+                </ul>
+                <p>
+                    L'approccio clinico è basato sulle più recenti evidenze scientifiche, garantendo al paziente un
+                    percorso di cura
+                    attento, empatico e mirato al miglioramento della qualità della vita. Prenota una visita
+                    specialistica
+                    per valutare il tuo stato di salute ormonale.
+                </p>
+            </section>
 
             <!-- Social Links Row -->
             <div class="social-row">
