--- a/index.html
+++ b/index.html
@@ -40,9 +40,9 @@
       "@context": "https://schema.org",
       "@type": "Physician",
       "name": "Roberto Palazzolo",
-      "image": "https://frank-leogit.github.io/Sito-Roberto/src/robert.png",
+      "image": "https://drpalazzolo.it/src/robert.png",
       "description": "Medico in formazione in Endocrinologia e specialista in cure per diabete, obesità e metabolismo, problemi alla tiroide.",
-      "url": "https://frank-leogit.github.io/Sito-Roberto/",
+      "url": "https://drpalazzolo.it/",
       "telephone": "+393496584329",
       "email": "robertopalazzolomed@gmail.com",
       "priceRange": "$$",
