--- a/index.html
+++ b/index.html
@@ -10,26 +10,26 @@
     <meta name="keywords"
         content="Roberto Palazzolo, Endocrinologo, Metabolismo, Visita Endocrinologica, Prenotazione, Medico, Diabete, Tiroide, Brescia, Milano">
     <meta name="author" content="Dott. Roberto Palazzolo">
-    <link rel="canonical" href="https://drpalazzolo.it/">
+    <link rel="canonical" href="https://frank-leogit.github.io/Sito-Roberto/">
 
     <!-- Apple Touch Icon -->
     <link rel="apple-touch-icon" href="./src/robert.png">
 
     <!-- Open Graph / Facebook / WhatsApp Preview -->
     <meta property="og:type" content="website">
-    <meta property="og:url" content="https://drpalazzolo.it/">
+    <meta property="og:url" content="https://frank-leogit.github.io/Sito-Roberto/">
     <meta property="og:title" content="Dott. Roberto Palazzolo - Endocrinologo">
     <meta property="og:description"
         content="Endocrinologo specialista in diabete, tiroide e metabolismo. Prenota la tua visita o contattami.">
-    <meta property="og:image" content="https://drpalazzolo.it/src/robert.png">
+    <meta property="og:image" content="https://frank-leogit.github.io/Sito-Roberto/src/robert.png">
 
     <!-- Twitter -->
     <meta property="twitter:card" content="summary_large_image">
-    <meta property="twitter:url" content="https://drpalazzolo.it/">
+    <meta property="twitter:url" content="https://frank-leogit.github.io/Sito-Roberto/">
     <meta property="twitter:title" content="Dott. Roberto Palazzolo - Endocrinologo">
     <meta property="twitter:description"
         content="Endocrinologo specialista in diabete, tiroide e metabolismo. Prenota la tua visita.">
-    <meta property="twitter:image" content="https://drpalazzolo.it/src/robert.png">
+    <meta property="twitter:image" content="https://frank-leogit.github.io/Sito-Roberto/src/robert.png">
 
     <!-- Favicon -->
     <link rel="icon" type="image/png" href="./src/robert.png">
@@ -40,9 +40,9 @@
       "@context": "https://schema.org",
       "@type": "Physician",
       "name": "Roberto Palazzolo",
-      "image": "https://drpalazzolo.it/src/robert.png",
+      "image": "https://frank-leogit.github.io/Sito-Roberto/src/robert.png",
       "description": "Medico in formazione in Endocrinologia e specialista in cure per diabete, obesità e metabolismo, problemi alla tiroide.",
-      "url": "https://drpalazzolo.it/",
+      "url": "https://frank-leogit.github.io/Sito-Roberto/",
       "telephone": "+393513156894",
       "email": "robertopalazzolomed@gmail.com",
       "priceRange": "$$",
