--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     <link rel="canonical" href="https://drpalazzolo.it/">
 
     <!-- Apple Touch Icon -->
-    <link rel="apple-touch-icon" href="./src/robert.png">
+    <link rel="apple-touch-icon" href="./src/Roberto.jpeg">
 
     <!-- Open Graph / Facebook / WhatsApp Preview -->
     <meta property="og:type" content="website">
@@ -21,7 +21,7 @@
     <meta property="og:title" content="Dott. Roberto Palazzolo - Endocrinologo">
     <meta property="og:description"
         content="Endocrinologo specialista in diabete, tiroide e metabolismo. Prenota la tua visita o contattami.">
-    <meta property="og:image" content="https://drpalazzolo.it/src/robert.png">
+    <meta property="og:image" content="https://drpalazzolo.it/src/Roberto.jpeg">
 
     <!-- Twitter -->
     <meta property="twitter:card" content="summary_large_image">
@@ -29,10 +29,10 @@
     <meta property="twitter:title" content="Dott. Roberto Palazzolo - Endocrinologo">
     <meta property="twitter:description"
         content="Endocrinologo specialista in diabete, tiroide e metabolismo. Prenota la tua visita.">
-    <meta property="twitter:image" content="https://drpalazzolo.it/src/robert.png">
+    <meta property="twitter:image" content="https://drpalazzolo.it/src/Roberto.jpeg">
 
     <!-- Favicon -->
-    <link rel="icon" type="image/png" href="./src/robert.png">
+    <link rel="icon" type="image/png" href="./src/logo.png">
 
     <!-- Structured Data (JSON-LD) for SEO -->
     <script type="application/ld+json">
@@ -40,7 +40,7 @@
       "@context": "https://schema.org",
       "@type": "Physician",
       "name": "Roberto Palazzolo",
-      "image": "https://drpalazzolo.it/src/robert.png",
+      "image": "https://drpalazzolo.it/src/Roberto.jpeg",
       "description": "Medico in formazione in Endocrinologia e specialista in cure per diabete, obesità e metabolismo, problemi alla tiroide.",
       "url": "https://drpalazzolo.it/",
       "telephone": "+393513156894",
@@ -71,13 +71,16 @@
     <div class="container">
         <!-- Profile Section -->
         <header class="profile-section">
-            <div class="profile-image-container">
-                <!-- Placeholder for Doctor's Image -->
-                <img src="./src/robert.png" alt="Foto Profilo" class="profile-image">
+            <div class="profile-visuals">
+                <img src="./src/logo.png" alt="Logo Dott. Roberto Palazzolo" class="branding-logo">
+                <div class="profile-image-container">
+                    <!-- Placeholder for Doctor's Image -->
+                    <img src="./src/Roberto.jpeg" alt="Foto Profilo" class="profile-image">
+                </div>
             </div>
             <h1 class="profile-name">Dott. Roberto Palazzolo</h1>
             <p class="profile-title">Endocrinologia</p>
-            <p class="profile-bio">Medico in formazione in Endocrinologia e specialista in cure per diabete, obesità e
+            <p class="profile-bio">Medico in formazione specialistica in Endocrinologia in cure per diabete, obesità e
                 metabolismo, problemi alla tiroide.</p>
         </header>
 
@@ -85,7 +88,7 @@
         <section class="info-section">
             <h2>I miei Servizi</h2>
             <p>
-                Il <strong>Dott. Roberto Palazzolo</strong> è un medico specialista in
+                Il <strong>Dott. Roberto Palazzolo</strong> è un medico esperto in
                 <strong>Endocrinologia</strong> e Malattie del Metabolismo.
                 Offre consulenze personalizzate per la gestione di patologie complesse come:
             </p>
@@ -108,18 +111,19 @@
         <!-- Links Section -->
         <main class="links-container">
 
-            <!-- Primary Action (Booking) - opens Google Calendar event template -->
-            <a href="https://www.google.com/calendar/render?action=TEMPLATE&text=Prenotazione+Visita+-+Dott.+Roberto+Palazzolo&details=Richiesta+prenotazione+visita.%0ATelefono%3A+%2B393496584329%0AEmail%3A+robertopalazzolomed%40gmail.com&location=Studio+Dott.+Roberto+Palazzolo&add=robertopalazzolomed%40gmail.com"
-                target="_blank" rel="noopener noreferrer" class="link-card featured">
-                <div class="icon-box"><i class="ph ph-calendar-check"></i></div>
+            <!-- Primary Action (Booking) - WhatsApp Booking -->
+            <a href="https://wa.me/393513156894?text=Salve%2C%20vorrei%20prenotare%20una%20visita." target="_blank"
+                rel="noopener noreferrer" class="link-card featured">
+                <div class="icon-box"><i class="ph ph-whatsapp-logo"></i></div>
                 <span class="link-text">Prenota una Visita</span>
                 <div class="arrow-box"><i class="ph ph-caret-right"></i></div>
             </a>
 
-            <!-- Contact Links -->
-            <a href="https://wa.me/+393513156894" class="link-card">
-                <div class="icon-box"><i class="ph ph-whatsapp-logo"></i></div>
-                <span class="link-text">Scrivimi su WhatsApp</span>
+            <!-- Location Link -->
+            <a href="https://www.google.com/maps/search/?api=1&query=Via+Alcide+de+Gasperi+165%2C+Catania"
+                target="_blank" rel="noopener noreferrer" class="link-card">
+                <div class="icon-box"><i class="ph ph-map-pin"></i></div>
+                <span class="link-text">Dove trovarmi</span>
                 <div class="arrow-box"><i class="ph ph-caret-right"></i></div>
             </a>
 
@@ -155,7 +159,7 @@
 
         <!-- Footer -->
         <footer class="footer">
-            <p>&copy; 2025 Dott. Roberto Palazzolo. Tutti i diritti riservati.</p>
+            <p>&copy; 2025 Dott. Roberto Palazzolo. Via Alcide de Gasperi 165, Catania</p>
             <p class="credits">P.IVA 1234253563</p>
         </footer>
     </div>
