--- a/index.html
+++ b/index.html
@@ -86,6 +86,33 @@
 
         <!-- SEO Content Section: Hidden from primary view but accessible -->
         <section class="info-section">
+            <!-- Chi Sono Section -->
+            <details>
+                <summary>
+                    <h2>Chi Sono</h2>
+                    <i class="ph ph-caret-down arrow-icon"></i>
+                </summary>
+                <div class="details-content">
+                    <p>
+                        Il <strong>Dott. Roberto Palazzolo</strong> è un medico dedicato alla cura e al benessere dei
+                        propri pazienti, con una
+                        formazione specialistica focalizzata sulle disfunzioni del sistema endocrino.
+                        L'obiettivo principale è fornire un approccio medico basato sull'ascolto e sull'analisi
+                        approfondita,
+                        per costruire percorsi terapeutici su misura.
+                    </p>
+                    <p>
+                        L'endocrinologia richiede un approccio olistico: ogni sintomo può essere la spia di un
+                        disequilibrio
+                        più complesso. Grazie a un costante aggiornamento scientifico e all'attenzione per le
+                        innovazioni
+                        terapeutiche, il Dott. Palazzolo offre trattamenti all'avanguardia per ristabilire l'equilibrio
+                        ormonale e metabolico.
+                    </p>
+                </div>
+            </details>
+
+            <!-- Servizi Section (Expanded) -->
             <details>
                 <summary>
                     <h2>I miei Servizi</h2>
@@ -93,26 +120,60 @@
                 </summary>
                 <div class="details-content">
                     <p>
-                        Il <strong>Dott. Roberto Palazzolo</strong> è un medico esperto in
-                        <strong>Endocrinologia</strong> e Malattie del Metabolismo.
-                        Offre consulenze personalizzate per la gestione di patologie complesse come:
+                        Offro un ventaglio completo di prestazioni mediche per la diagnosi, il trattamento e il
+                        monitoraggio
+                        delle principali patologie endocrino-metaboliche. Ogni visita include un'anamnesi dettagliata e
+                        una valutazione clinica accurata.
                     </p>
                     <ul>
-                        <li><strong>Diabete Mellito</strong> (Tipo 1, Tipo 2 e Gestazionale)</li>
-                        <li><strong>Patologie della Tiroide</strong> (Ipotiroidismo, Ipertiroidismo, Noduli, Tiroidite
-                            di
-                            Hashimoto)</li>
-                        <li><strong>Obesità e Sindrome Metabolica</strong> (Percorsi di calo ponderale)</li>
-                        <li><strong>Disturbi Ormonali</strong> (Menopausa, irregolarità del ciclo, ovaio policistico)
+                        <li>
+                            <strong>Diabete Mellito (Tipo 1, Tipo 2 e Gestazionale):</strong> Pianificazione di diete
+                            personalizzate,
+                            terapie farmacologiche innovative e gestione delle complicanze. Supporto per il diabete in
+                            gravidanza.
                         </li>
-                        <li><strong>Osteoporosi</strong> e salute dell'osso</li>
+                        <li>
+                            <strong>Patologie della Tiroide:</strong> Diagnosi e cura di ipotiroidismo, ipertiroidismo,
+                            tiroiditi autoimmuni (Hashimoto, Graves), e gestione dei noduli tiroidei con indicazioni
+                            ecografiche.
+                        </li>
+                        <li>
+                            <strong>Obesità e Sindrome Metabolica:</strong> Percorsi strutturati di calo ponderale che
+                            integrano nutrizione e, quando necessario, supporto farmacologico per combattere
+                            l'insulino-resistenza.
+                        </li>
+                        <li>
+                            <strong>Disturbi Ormonali Femminili e Maschili:</strong> Trattamento della sindrome
+                            dell'ovaio
+                            policistico (PCOS), irregolarità mestruali, menopausa, ipogonadismo e disturbi della sfera
+                            sessuale.
+                        </li>
+                        <li>
+                            <strong>Osteoporosi e Metabolismo Osseo:</strong> Valutazione del rischio di frattura e
+                            terapie per rafforzare la densità ossea, prevenendo l'osteoporosi.
+                        </li>
                     </ul>
+                </div>
+            </details>
+
+            <!-- Perché Rivolgersi a Me Section -->
+            <details>
+                <summary>
+                    <h2>Perché una visita Endocrinologica?</h2>
+                    <i class="ph ph-caret-down arrow-icon"></i>
+                </summary>
+                <div class="details-content">
                     <p>
-                        L'approccio clinico è basato sulle più recenti evidenze scientifiche, garantendo al paziente un
-                        percorso di cura
-                        attento, empatico e mirato al miglioramento della qualità della vita. Prenota una visita
-                        specialistica
-                        per valutare il tuo stato di salute ormonale.
+                        Il sistema endocrino regola funzioni vitali come il metabolismo, la crescita, la riproduzione e
+                        l'umore.
+                        Spesso sintomi come stanchezza cronica, variazioni di peso inspiegabili, alterazioni del ciclo
+                        o disturbi del sonno possono nascondere uno squilibrio ormonale.
+                    </p>
+                    <p>
+                        Rivolgersi a uno specialista permette di indagare le cause profonde di questi disturbi.
+                        Non sottovalutare i segnali del tuo corpo: una diagnosi precoce è fondamentale per prevenire
+                        complicanze a lungo termine e migliorare significativamente la qualità della vita.
+                        Prenotare una visita è il primo passo verso il benessere consapevole.
                     </p>
                 </div>
             </details>
@@ -122,7 +183,8 @@
 
             <!-- Primary Action (Booking) - WhatsApp Booking -->
             <a href="https://wa.me/393513156894?text=Salve%2C%20vorrei%20prenotare%20una%20visita." target="_blank"
-                rel="noopener noreferrer" class="link-card featured">
+                rel="noopener noreferrer" class="link-card featured"
+                title="Prenota una visita specialistica con il Dott. Palazzolo su WhatsApp">
                 <div class="icon-box"><i class="ph ph-whatsapp-logo"></i></div>
                 <span class="link-text">Prenota una Visita</span>
                 <div class="arrow-box"><i class="ph ph-caret-right"></i></div>
@@ -130,26 +192,27 @@
 
             <!-- Location Link -->
             <a href="https://www.google.com/maps/search/?api=1&query=Via+Alcide+de+Gasperi+165%2C+Catania"
-                target="_blank" rel="noopener noreferrer" class="link-card">
+                target="_blank" rel="noopener noreferrer" class="link-card"
+                title="Vedi la posizione dello studio su Google Maps">
                 <div class="icon-box"><i class="ph ph-map-pin"></i></div>
                 <span class="link-text">Dove trovarmi</span>
                 <div class="arrow-box"><i class="ph ph-caret-right"></i></div>
             </a>
 
-            <a href="tel:+393513156894" class="link-card">
+            <a href="tel:+393513156894" class="link-card" title="Chiama lo studio del Dott. Palazzolo">
                 <div class="icon-box"><i class="ph ph-phone"></i></div>
                 <span class="link-text">Chiama lo Studio</span>
                 <div class="arrow-box"><i class="ph ph-caret-right"></i></div>
             </a>
 
-            <a href="mailto:robertopalazzolomed@gmail.com" class="link-card">
+            <a href="mailto:robertopalazzolomed@gmail.com" class="link-card" title="Invia una email al Dott. Palazzolo">
                 <div class="icon-box"><i class="ph ph-envelope-simple"></i></div>
                 <span class="link-text">Invia una Email</span>
                 <div class="arrow-box"><i class="ph ph-caret-right"></i></div>
             </a>
 
             <a href="https://www.google.com/search?q=Dott.+Roberto+Palazzolo+Endocrinologo" target="_blank"
-                rel="noopener noreferrer" class="link-card">
+                rel="noopener noreferrer" class="link-card" title="Leggi le recensioni su Google">
                 <div class="icon-box"><img src="https://www.google.com/favicon.ico" alt="Google" class="google-icon">
                 </div>
                 <span class="link-text">Dicono di me</span>
@@ -160,9 +223,12 @@
             <!-- Social Links Row -->
             <div class="social-row">
                 <a href="https://www.instagram.com/dott.robertopalazzolo?igsh=MTNwd3h2Z3cxc2YzMw==" class="social-icon"
-                    aria-label="Instagram"><i class="ph ph-instagram-logo"></i></a>
-                <a href="#" class="social-icon" aria-label="Facebook"><i class="ph ph-facebook-logo"></i></a>
-                <a href="#" class="social-icon" aria-label="Linkedin"><i class="ph ph-linkedin-logo"></i></a>
+                    aria-label="Instagram" title="Segui il Dott. Palazzolo su Instagram"><i
+                        class="ph ph-instagram-logo"></i></a>
+                <a href="#" class="social-icon" aria-label="Facebook" title="Visita la pagina Facebook"><i
+                        class="ph ph-facebook-logo"></i></a>
+                <a href="#" class="social-icon" aria-label="Linkedin" title="Profilo LinkedIn"><i
+                        class="ph ph-linkedin-logo"></i></a>
             </div>
         </main>
 
