--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     <link rel="canonical" href="https://drpalazzolo.it">
 
     <!-- Apple Touch Icon -->
-    <link rel="apple-touch-icon" href="./src/Roberto.jpeg">
+    <link rel="apple-touch-icon" href="./src/Roberto.png">
 
     <!-- Open Graph / Facebook / WhatsApp Preview -->
     <meta property="og:type" content="website">
@@ -75,7 +75,7 @@
                 <img src="./src/logo.png" alt="Logo Dott. Roberto Palazzolo" class="branding-logo">
                 <div class="profile-image-container">
                     <!-- Placeholder for Doctor's Image -->
-                    <img src="./src/Roberto.jpeg" alt="Foto Profilo" class="profile-image">
+                    <img src="./src/Roberto.png" alt="Foto Profilo" class="profile-image">
                 </div>
             </div>
             <h1 class="profile-name">Dott. Roberto Palazzolo</h1>
