--- a/index.html
+++ b/index.html
@@ -95,7 +95,7 @@
                 <div class="details-content">
                     <p>
                         Il <strong>Dott. Roberto Palazzolo</strong> è un medico dedicato alla cura e al benessere dei
-                        propri pazienti, con una
+                        propri pazienti, attualmente in
                         formazione specialistica focalizzata sulle disfunzioni del sistema endocrino.
                         L'obiettivo principale è fornire un approccio medico basato sull'ascolto e sull'analisi
                         approfondita,
