ritocchi seo finali

--- a/index.html
+++ b/index.html
@@ -4,11 +4,11 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Dott. Roberto Palazzolo - Endocrinologo</title>
+    <title>Dott. Roberto Palazzolo - Endocrinologia</title>
     <meta name="description"
-        content="Roberto Palazzolo, Endocrinologo specialista in diabete, tiroide e metabolismo. Prenota una visita o contattami su WhatsApp.">
+        content="Roberto Palazzolo, Endocrinologo in formazione esperto in diabete, tiroide e metabolismo. Prenota una visita o contattami su WhatsApp.">
     <meta name="keywords"
-        content="Roberto Palazzolo, Endocrinologo, Metabolismo, Visita Endocrinologica, Prenotazione, Medico, Diabete, Tiroide, Brescia, Milano">
+        content="Roberto Palazzolo, Endocrinologia, Metabolismo, Visita Endocrinologica, Prenotazione, Medico, Diabete, Tiroide, Catania, Acireale">
     <meta name="author" content="Dott. Roberto Palazzolo">
     <link rel="canonical" href="https://drpalazzolo.it">
 
@@ -18,21 +18,21 @@
     <!-- Open Graph / Facebook / WhatsApp Preview -->
     <meta property="og:type" content="website">
     <meta property="og:url" content="https://drpalazzolo.it">
-    <meta property="og:title" content="Dott. Roberto Palazzolo - Endocrinologo">
+    <meta property="og:title" content="Dott. Roberto Palazzolo - Endocrinologia">
     <meta property="og:description"
-        content="Endocrinologo specialista in diabete, tiroide e metabolismo. Prenota la tua visita o contattami.">
+        content="Endocrinologo in formazione esperto in diabete, tiroide e metabolismo. Prenota la tua visita o contattami.">
     <meta property="og:image" content="https://drpalazzolo.it/src/robert.png">
 
     <!-- Twitter -->
     <meta property="twitter:card" content="summary_large_image">
     <meta property="twitter:url" content="https://drpalazzolo.it">
-    <meta property="twitter:title" content="Dott. Roberto Palazzolo - Endocrinologo">
+    <meta property="twitter:title" content="Dott. Roberto Palazzolo - Endocrinologia">
     <meta property="twitter:description"
-        content="Endocrinologo specialista in diabete, tiroide e metabolismo. Prenota la tua visita.">
+        content="Endocrinologo in formazione esperto in diabete, tiroide e metabolismo. Prenota la tua visita.">
     <meta property="twitter:image" content="https://drpalazzolo.it/src/robert.png">
 
     <!-- Favicon -->
-    <link rel="icon" type="image/png" href="./src/logo.png">
+    <link rel="icon" type="image/png" href="https://drpalazzolo.it/src/logo.png">
 
     <!-- Structured Data (JSON-LD) for SEO -->
     <script type="application/ld+json">
@@ -41,6 +41,7 @@
       "@type": "Physician",
       "name": "Roberto Palazzolo",
       "image": "https://drpalazzolo.it/src/robert.png",
+      "logo": "https://drpalazzolo.it/src/logo.png",
       "description": "Medico in formazione in Endocrinologia e specialista in cure per diabete, obesità e metabolismo, problemi alla tiroide.",
       "url": "https://drpalazzolo.it",
       "telephone": "+393513156894",
