--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     <link rel="canonical" href="https://drpalazzolo.it">
 
     <!-- Apple Touch Icon -->
-    <link rel="apple-touch-icon" href="./src/Roberto.png">
+    <link rel="apple-touch-icon" href="https://drpalazzolo.it/src/Roberto.png">
 
     <!-- Open Graph / Facebook / WhatsApp Preview -->
     <meta property="og:type" content="website">
@@ -29,7 +29,7 @@
     <meta property="twitter:title" content="Dott. Roberto Palazzolo - Endocrinologia">
     <meta property="twitter:description"
         content="Endocrinologo in formazione esperto in diabete, tiroide e metabolismo. Prenota la tua visita.">
-    <meta property="twitter:image" content="https://drpalazzolo.it/src/robert.png">
+    <meta property="twitter:image" content="https://drpalazzolo.it/src/Roberto.png">
 
     <!-- Favicon -->
     <link rel="icon" type="image/png" href="https://drpalazzolo.it/src/logo.png">
