--- a/index.html
+++ b/index.html
@@ -45,6 +45,7 @@
       "description": "Medico in formazione in Endocrinologia e specialista in cure per diabete, obesità e metabolismo, problemi alla tiroide.",
       "url": "https://drpalazzolo.it",
       "telephone": "+393513156894",
+      "medicalSpecialty": "Endocrinology",
       "email": "robertopalazzolomed@gmail.com",
       "priceRange": "$$",
       "address": {
@@ -212,7 +213,7 @@
                 <div class="arrow-box"><i class="ph ph-caret-right"></i></div>
             </a>
 
-            <a href="https://www.google.com/search?q=Dott.+Roberto+Palazzolo+Endocrinologo" target="_blank"
+            <a href="https://www.google.com/search?q=Dott.+Roberto+Palazzolo+Endocrinologia" target="_blank"
                 rel="noopener noreferrer" class="link-card" title="Leggi le recensioni su Google">
                 <div class="icon-box"><img src="https://www.google.com/favicon.ico" alt="Google" class="google-icon">
                 </div>
