--- a/index.html
+++ b/index.html
@@ -32,7 +32,10 @@
     <meta property="twitter:image" content="https://drpalazzolo.it/src/Roberto.png">
 
     <!-- Favicon -->
-    <link rel="icon" type="image/png" href="https://drpalazzolo.it/src/logo.png">
+    <link rel="icon" href="/favicon.png" sizes="512x512" type="image/png">
+    <link rel="icon" href="/favicon.png" sizes="192x192" type="image/png">
+    <link rel="icon" href="/favicon.png" sizes="48x48" type="image/png">
+
 
     <!-- Structured Data (JSON-LD) for SEO -->
     <script type="application/ld+json">
